--- a/main.html
+++ b/main.html
@@ -424,7 +424,7 @@
     <script>
         const electron = require('electron');
         const { ipcRenderer } = electron;
-        var macaddress = require('macaddress');
+        var macaddress = require('macaddress'); 
 
         macaddress.one(function (err, mac) {
             console.log(mac);
@@ -439,16 +439,30 @@
         // }
 
         var lstBooks = [];
+        // window.localStorage.removeItem("lstBooks")
         function download(id) {
             // if (window.localStorage.getItem("lstBooks") != null) {
             //     var lstOldBooks = window.localStorage.getItem("lstBooks");
             //     lstBooks.push(lstOldBooks);
             // }
-            lstBooks.push(id.toString());
-            //lstBooks = uniqueList(lstBooks);
-            window.localStorage.setItem("lstBooks", lstBooks);
-            //window.localStorage.removeItem("lstBooks");
-            alert("Books successfully downloaded.");
+            lstBooks =JSON.parse(window.localStorage.getItem("lstBooks")) || [];
+            var filtered = lstBooks.filter(function(value){ 
+                    return value == id; 
+                });
+         
+            if(filtered.length > 0){ 
+                alert("Book is already in demos.");
+            }
+            else{
+                lstBooks.push(id.toString());
+                window.localStorage.setItem("lstBooks", JSON.stringify(lstBooks));
+                alert("Books successfully downloaded.");
+            }
+            // 
+            // //lstBooks = uniqueList(lstBooks);
+            // 
+            // //window.localStorage.removeItem("lstBooks");
+            // 
         }
 
         function buy(id) {
