--- a/download.html
+++ b/download.html
@@ -203,7 +203,7 @@
             console.log(mac);
         });
 
-        function bindDownloads(){
+        function bindDownloads() {
             if (window.localStorage.getItem("lstBooks") != null) {
                 var lstBooks = JSON.parse(window.localStorage.getItem("lstBooks")) || [];
                 console.log(lstBooks)
@@ -213,7 +213,7 @@
                     var captionTitle = '';
                     var viewButtonHTML = '';
                     var deleteButtonHTML = '';
-                    
+
                     if (lstBooks[i] == "1") {
                         imgURL = 'PDF/1.jpg';
                         captionTitle = 'Account';
@@ -289,17 +289,19 @@
 
                 $(".lstBooks").html(str);
             }
-        
         }
 
         $(function () {
             bindDownloads();
-            });
+        });
 
         function openPDf(url) {
             const { BrowserWindow } = require('electron').remote
+            var remote = require('electron').remote;
+            var currentWindow = remote.getCurrentWindow();
             const PDFWindow = require('electron-pdf-window')
-            const win = new BrowserWindow({ width: 1600, height: 900 })
+            const win = new BrowserWindow({ width: 1600, height: 900, parent: currentWindow })
+            win.setMenu(null);
             PDFWindow.addSupport(win)
             win.loadURL(url)
         }
@@ -312,11 +314,11 @@
 
         function remove(bookID) {
             var lstBooks = JSON.parse(window.localStorage.getItem("lstBooks")) || [];
-            var filtered = lstBooks.filter(function(value){ 
-                    return value != bookID; 
-                });
-            window.localStorage.setItem("lstBooks", JSON.stringify(filtered)); 
-            bindDownloads(); 
+            var filtered = lstBooks.filter(function (value) {
+                return value != bookID;
+            });
+            window.localStorage.setItem("lstBooks", JSON.stringify(filtered));
+            bindDownloads();
         }
 
         $(document).ready(function () {
