--- a/register.html
+++ b/register.html
@@ -48,7 +48,7 @@
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a href="#" class="aLogo"><img src="logo.png" alt="Logo" /></a>
+                <a href="#" class="lnkHome"><img src="logo.png" alt="Logo" /></a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -56,7 +56,7 @@
                         <a href="#" style="font-size: 24px; font-weight: bolder;">BYGOZ E-LEARNING PRIVATE LIMITED</a>
                     </li>
                     <li>
-                        <a href="#" class="aLogo" data-close="true">
+                        <a href="#" class="lnkHome" data-close="true">
                             <i class="material-icons">home</i>
                         </a>
                     </li>
@@ -68,7 +68,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#" id="mLogin">
+                        <a href="#" class="lnkLogin">
                             <i class="material-icons">shopping_cart</i>
                             <span>Bygoz Store</span>
                         </a>
@@ -102,7 +102,7 @@
                                             <button type="submit" class="btn btn-success"
                                                 style="width: 100%;">REGISTER</button>
                                             <br /><br />
-                                            <a href="#" id="aLogin">Already registered?</a>
+                                            <a href="#" class="lnkLogin">Already registered?</a>
                                         </form>
                                     </div>
                                 </div>
