--- a/videoplayer.html
+++ b/videoplayer.html
@@ -229,7 +229,7 @@
             $('#aSample').click(function (e) {
                 e.preventDefault();
 
-                window.location.href = "download.html";
+                window.location.href = "library.html";
             });
         });
     </script>
