--- a/bookdetail.html
+++ b/bookdetail.html
@@ -298,7 +298,7 @@
 
             $('#aSample').click(function (e) {
                 e.preventDefault();
-                window.location.href = "download.html";
+                window.location.href = "library.html";
             });
         });
     </script>
