--- a/viewer.html
+++ b/viewer.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src='./public/lib/webviewer.min.js'></script>
+    <script src='./THEME/js/custom.js'></script>
     
   </head>
 
